// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test 1 1`] = `
<div
  className="Pinpoint Tag Item   "
  style={
    Object {
      "backgroundColor": "#006a21",
      "border": "1px solid var(--tag-bcolor, #555955)",
      "color": "var(--tag-fgcolor, #fff)",
    }
  }
>
  test-1
</div>
`;

exports[`Test 2 1`] = `
<div
  className="Pinpoint Tag Item   "
  style={
    Object {
      "backgroundColor": "#005862",
      "border": "1px solid var(--tag-bcolor, #555555)",
      "color": "var(--tag-fgcolor, #fff)",
    }
  }
>
  test-2
</div>
`;

exports[`Test 3 1`] = `
<div
  className="Pinpoint Tag Item   "
  style={
    Object {
      "backgroundColor": "#6149c5",
      "border": "1px solid var(--tag-bcolor, #6a51ac)",
      "color": "var(--tag-fgcolor, #fff)",
    }
  }
>
  test-3
</div>
`;

exports[`Test 4 1`] = `
<div
  className="Pinpoint Tag Item   "
  style={
    Object {
      "backgroundColor": "#973d9b",
      "border": "1px solid var(--tag-bcolor, #815383)",
      "color": "var(--tag-fgcolor, #fff)",
    }
  }
>
  test-4
</div>
`;

exports[`Test noColor 1`] = `
<div
  className="Pinpoint Tag Item  nocolor "
>
  test-4
  <span
    className="icon"
  >
    <svg
      aria-hidden="true"
      data-icon="times"
      data-prefix="far"
      focusable="false"
      height={12}
      role="img"
      viewBox="0 0 320 512"
      width={7.5}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`Test removable 1`] = `
<div
  className="Pinpoint Tag Item   "
  style={
    Object {
      "backgroundColor": "#973d9b",
      "border": "1px solid var(--tag-bcolor, #815383)",
      "color": "var(--tag-fgcolor, #fff)",
    }
  }
>
  test-4
  <span
    className="icon"
  >
    <svg
      aria-hidden="true"
      data-icon="times"
      data-prefix="far"
      focusable="false"
      height={12}
      role="img"
      viewBox="0 0 320 512"
      width={7.5}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;
